did some image compression to hopefully load those images faster, fixed a spacing issue with the about section

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,5 +1,6 @@
 section {
   width: 100%;
+  /* min-height: 100vh; */
 }
 
 section img {
@@ -56,10 +57,12 @@ section img {
 
 
 .content{
+  position: absolute;
+  top: calc(100%);
   color: white;
   padding: 100px;
   padding-top: 50px;
-  background-color:#1a1a20;
+  background-color: #1a1a20;
 }
 
 div button {
@@ -90,6 +93,7 @@ div button {
   }
   .content {
     padding: 20px;
+    
   }
 }
 
